# ToolProj

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pymon  MistralErr.txt  MistralOut.txt  QwenErr.txt  QwenOut.txt  README.md  YiErr.txt  YiOut.txt  deepseekErr.txt  deepseekOut.txt  error.txt  graph_coloring.lp  license  llamaErr.txt  llamaOut.txt  log.txt  makefile  mypi.ini  output.txt  pyproject.toml  pytest.ini  readme  spin_up_llm.sh  terry.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  experiments.md  task.md
.github/workflows/: code-review.yml  lint.yml  test.yml
data/: data_preprocess.ipynb  dataloader.py
docs/: GIT_WORKFLOW.md  code_mapping.json
docs/experiment_tasks/: 01_embedding_ablation.md  02_difficulty_scaling.md  03_per_kind_analysis.md  04_information_bottleneck_viz.md  05_token_attribution.md  06_noise_injection.md  07_token_normalization.md  08_neural_mi_estimators.md  09_ood_generalization.md  10_noise_robustness_code_vs_nl.md
docs/experiment_tasks/executed/: 2026-01-10_scaled-code-vs-nl.md
docs/general_tasks/: paper-update-plan.md
docs/swe_tasks/: 2026-01-10-exps-logistic-data-validation-design.md  fix-results-data-quality.md
experiments/screen_new_models/: README.md
experiments/screen_new_models/src/: analyze_accuracy.py  single_model_smoke_test.sh
experiments/screen_new_models/tests/: __init__.py  conftest.py
log/: Gemmaerror.txt  Gemmaoutput.txt  MistralErr.txt  MistralOut.txt  OssErr.txt  OssOut.txt  QwenErr.txt  QwenOut.txt  deepseekErr.txt  deepseekOut.txt  llamaErr.txt  llamaOut.txt
notebooks/: finegrained_figures.ipynb  gptoss_debug.ipynb
prof/: combined.prof  test_arm2.prof  test_arm3.prof  test_clean_code.prof  test_dataloading.prof  test_spp_llm.prof
scripts/: validate_code_mapping.py
src/: replace.txt  run.sh  run_between_concept.sh  run_mi.sh  try.py
src/between_concept/: metrics.py  plotting.py  prompts.py  runner.py  tasks.py
src/exps_benchmarks/: error.txt  interpret_results.ipynb  run_script.sh  run_script2.sh
src/exps_concept/: run_between_concept.sh  runner.py
src/exps_concept_answer_corr/: concept_answer_correlation.py  corr.py  read.py  run_concept_corr.sh  softcorr_from_perf.csv
src/exps_correlation/: DeepSeek-R1-Distill-Llama-8B_seed0_results_code_tool.csv  Llama-3.1-8B-Instruct_results_code_tool.csv  Llama-3.1-8B-Instruct_seed0_results_code_tool.csv  Ministral-8B-Instruct-2410_seed0_results_code_tool.csv  compiled_res.csv  correlation.ipynb  deepseek-coder-7b-instruct-v1.5_seed0_results_code_tool.csv  gemma-2-9b-it_results_code_tool.csv  gemma-2-9b-it_seed0_results_code_tool.csv  parse.ipynb  results_code_tool.csv  run_corr.py  run_corr.sh
src/exps_correlation/cleaned_data/: aiden.csv  berkeley.csv  livebench.csv  mcpmark.csv
src/exps_correlation/raw_data/: aiden.txt  livebench.txt  mcpmark.txt
src/exps_logistic/: __init__.py  classifier.py  code_hf.txt  code_results.txt  config.py  data_utils.py  featurizer.py  lr_concept_features.py  main.py  metrics.py  nl_hf.txt  parsers.py  prod_logistic.sh  rationale_view.ipynb  run.sh  run_code_vs_nl_experiment.py
src/exps_logistic/experiment_outputs/: experiment_results.csv  summary_report.md
src/exps_logistic/notebooks/: examples.ipynb  generate_plots.py  merge_performance_accuracy.ipynb
src/exps_logistic/old_results/: bert_code.csv  bert_code.txt  bert_nl.csv  bert_nl.txt  nl_results.txt
src/exps_logistic/tests/: test_metrics.py  test_parsers.py
src/exps_mi/: bootstrap_ci.py  mi_experiment.py  run_mi.sh
src/exps_mi_concept/: mi_experiment.py  run_mi.sh
src/exps_mi_semantics/: analyze_results.py  run.sh  semantics.py
src/exps_mi_semantics/deepseek/: mi_semantics_items.parquet  sem_cache.jsonl
src/exps_mi_semantics/deepseek1/: mi_semantics_items.parquet  sem_cache.jsonl
src/exps_mixed_model/: __init__.py  benchmarker.py  data_loader.py  main.py  mixed_model.py  visualization.py
src/exps_performance/: README  algorithms.py  analysis.py  analysis_noise_code_vs_nl.py  analyze.sh  analyze_results.py  arms.py  code_exec.py  cot.py  dataset.py  dev.sh  dev_new.sh  error.txt  exec_stats.py  few_shot_examples.py  final_result.txt  llm.py  logger.py  main.py  makefile  metrics.py  noise.py  noise_inspection.py  noise_runner.py  parsing.py  perf_bootstrap.py  plot.py  problems.py  problems_old.py  prompts.py  run_bootstrap.sh  run_gsm8k.sh  run_openai.sh  run_performance.sh  utils.py
src/exps_pret_corr/: DOCS.md  Docs.md  __init__.py  coupling.sh  coupling_probe.py  data_filtering.ipynb  data_loader.py  download_hf_manual.py  filter.py  make_olmo_sample.py  pretrain_mi.py  probes.py  run_download.sh  run_filter.sh  run_marin.sh  run_mi.sh  run_sample_olmo.sh  simple_download.py  stats.txt  std.out
src/kl_div_exps/: plotting.py  runner.py
src/mi_exps/: vis_kl.py
src/models/: transformer.py
src/notebooks/: dev.ipynb  facet_interactions.ipynb  mi_accuracy_small.ipynb
src/performance/: cot.py  run_performance.sh
tests/: .pymon  conftest.py  log.txt  test_path_parsing.py
tests/integration/: test_arms_regression.py  test_main.py  test_performance.py
tests/logistic/: __init__.py  test_classifier.py  test_data_utils.py  test_integration.py  test_metrics.py  test_mutual_info.py  test_parsers.py
tests/mixed_model/: __init__.py  test_benchmarker.py  test_data_loader.py  test_integration.py  test_mixed_model.py  test_visualization.py
tests/pret_corr/: __init__.py  test_data_loader.py  test_probes.py  test_smoke.py
tests/unit/: test_algorithms.py  test_analysis.py  test_checkpoint_jsonl.py  test_checkpoint_loading.py  test_clrs.py  test_dataset.py  test_executor.py  test_fine_grained.py  test_gsm8k.py  test_llm.py  test_log_results.py  test_main.py  test_metrics.py  test_noise.py  test_nphard_util_pointer.py  test_nphardeval.py  test_parser_lenient.py  test_parser_rerun.py  test_probs.py  test_res_counts.py  test_runner.py  test_stage_guard.py  test_utils.py
workspace/: create-slide3.js  slide3-simplified.html  slide3-simplified.pptx
workspace/tool-figure-unpacked/: [Content_Types].xml
(+448 files in other folders)
