[project]
name = "tools"
requires-python = "==3.10"
version = "0.1.0"
description = "Tool Proj Repo"
readme = "README.md"
license = "MIT"
dependencies = [ "transformer-lens>=2.16.1,<3", "ipykernel>=6.30.1,<7", "transformers>=4.55.2,<5", "jupyterlab>=4.4.6,<5", "pixi-kernel>=0.6.6,<0.7", "rich>=14.1.0,<15", "huggingface-hub[cli]>=0.34.4,<0.35", "ruff>=0.12.9,<0.13", "pytest>=8.4.1,<9", "einops>=0.8.1,<0.9", "jaxtyping>=0.3.2,<0.4", "tqdm>=4.67.1,<5", "tiktoken>=0.11.0,<0.12", "cox>=0.1.post3,<0.2", "accelerate>=1.10.1,<2", "tensorboardx>=2.6.4,<3", "tensorboard>=2.20.0,<3", "matplotlib>=3.10.5,<4", "seaborn>=0.13.2,<0.14", "openai>=1.102.0,<2", "pulp>=3.2.2,<4", "scipy>=1.15.3,<2", "numpy>=1.26.4,<2", "tables>=3.10.1,<4", "torch==2.6.0", "vllm==0.8.0", "pyarrow>=15", "pandas", "datasets", "scikit-learn>=1.7.2,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tools = { path = ".", editable = true }


[tool.pixi.dependencies]
# Keep a minimal CUDA runtime so the wheel has the shared libs it expects.
# (12.4 is compatible with your 12.6 driver)
cuda-cudart = "12.4.*"
cuda-nvrtc  = "12.4.*"
cuda-nvcc = "12.4.*"
nccl = ">=2.27.7.1,<3"
huggingface_hub = ">=0.34.4,<0.35"
lazygit = ">=0.54.2,<0.55"
numpy = "==1.26.4"
pyarrow = { version = "==15.0.2", channel = "conda-forge" }
fsspec = { version = "==2024.5.0", channel = "conda-forge" }

[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
