[project]
name = "tools"
requires-python = ">=3.10,<3.11"
version = "0.1.0"
description = "Tool Proj Repo"
readme = "README.md"
license = "MIT"
dependencies = [
    "transformer-lens>=2.16.1,<3",
    "ipykernel>=6.30.1,<7",
    "transformers>=4.55.2,<5",
    "jupyterlab>=4.4.6,<5",
    "rich>=14.1.0,<15",
    "ruff>=0.12.9,<0.13",
    "pytest>=8.4.1,<9",
    "einops>=0.8.1,<0.9",
    "tqdm>=4.67.1,<5",
    "tiktoken>=0.11.0,<0.12",
    "cox>=0.1.post3,<0.2",
    "accelerate>=1.10.1,<2",
    "tensorboardx>=2.6.4,<3",
    "matplotlib>=3.10.5,<4",
    "seaborn>=0.13.2,<0.14",
    "pulp>=3.2.2,<4",
    "numpy>=1.26.4,<2",
    "tables>=3.10.1,<4",
    "pyarrow>=15",
    "pandas",
    "scikit-learn>=1.7.2,<2",
    "jaxtyping>=0.3.2,<0.4",
    "openai>=1.109.1,<2",
    "statsmodels>=0.14.5,<0.15",
    "plotly>=6.3.1,<7",
    "datasets>=4.0.0,<5",
    "huggingface-hub",
    "simplejson>=3.20.2,<4",
    "chex>=0.1.90,<0.2",
    "tensorboard>=2.20.0,<3",
    "langchain[all]>=1.0.5,<2",
    "pytest-profiling>=1.8.1,<2",
    "pytest-monitor>=1.6.6,<2",
    "tbparse>=0.0.9,<0.0.10",
    "debugpy>=1.8.17,<2",
    "ipdb>=0.13.13,<0.14",
    "vllm==0.10.2",
    "fsspec==2024.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "simple-parsing>=0.1.7",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
# Note: CUDA libraries (cuda-cudart, cuda-nvrtc, cuda-nvcc, nccl) must be installed
# at the system level. Ensure CUDA 12.4+ is available on your system.
# CLI tools (lazygit, hyperfine) should be installed via your system package manager.

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"] 
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-m 'not slow' -p no:monitor"  # default: run fast only
markers = [
    "slow: marks tests that spin up LLMs or are otherwise slow",
]
    
[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true
exclude = "(^tests/|^src/exps_benchmarks/|^src/exps_code_analysis/|^src/exps_mixed_model/|^src/exps_pret_corr/|^src/exps_logistic/|^src/exps_performance/clrs/algorithms/|^src/models/archive-v0/|^src/models/wheels-v5/)"

[[tool.mypy.overrides]]
module = ["mypy.plugins.numpy.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true